--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^1.2.0",
     "bootstrap": "^5.2.3",
     "export-from-json": "^1.7.0",
+    "html-to-image": "^1.10.9",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
