--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^5.2.3",
     "export-from-json": "^1.7.0",
     "html-to-image": "^1.10.9",
+    "localforage": "^1.10.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
