--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "localforage": "^1.10.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
+    "react-code-input": "^3.10.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-scripts": "5.0.1",
