--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^1.2.0",
     "bootstrap": "^5.2.3",
+    "cleave.js": "^1.6.0",
     "export-from-json": "^1.7.0",
     "html-to-image": "^1.10.9",
     "localforage": "^1.10.0",
